--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,9 @@
 # Netlify 배포 설정
 
 [build]
-  # 빌드 명령어 (Python 모듈로 pip 실행)
-  command = "python -m pip install --upgrade pip && python -m pip install -r requirements.txt"
+  # 빌드 명령어 (Python Functions는 netlify/functions/ 디렉토리의 requirements.txt 자동 설치)
+  # Functions 디렉토리에 requirements.txt가 있으면 Netlify가 자동으로 설치
+  command = "echo 'Dependencies will be installed by Netlify Functions runtime'"
   # 서버리스 함수 디렉토리
   functions = "netlify/functions"
   # 정적 파일 디렉토리 (저장소 루트 기준)
